--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-router-redux": "5.0.0-alpha.8",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-form": "^7.4.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.2"
